--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,10 @@
 # dependencies
 /node_modules
 /.pnp
+/.env
 .pnp.js
+/backend/node_modules
+/backend/.env
 
 # testing
 /coverage
@@ -21,3 +24,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+backend/.env
+backend/.env
