--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 8080
-MONGODB_URI = 
+MONGO_URI = mongodb+srv://rishabh:rishabh@cluster0.ar3lt.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
